--- a/app/client/stylesheets/components/Notification.scss
+++ b/app/client/stylesheets/components/Notification.scss
@@ -24,7 +24,7 @@
             padding-left: $avatar-size + 10px;
 
             .pa-Heading {
-                margin-bottom: 1px;
+                margin-bottom: 3px;
             }
         }
     }
